Added NaturalDatasetStimulus() and NaturalDatasetSpikes() classes

--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -9,20 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -9216,9 +9207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -9229,7 +9220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -9240,7 +9231,7 @@
        "[u'images', u'spikes', u'stimulus']"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9251,7 +9242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -9262,7 +9253,7 @@
        "(25, 1519, 1007)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9273,7 +9264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -9284,7 +9275,7 @@
        "(541200, 13)"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9295,7 +9286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -9306,7 +9297,7 @@
        "(541200, 3)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9317,7 +9308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -9325,10 +9316,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 14, 507, 963], dtype=int32)"
+       "array([ 14, 507, 963], dtype=int16)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9339,7 +9330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -9350,7 +9341,7 @@
        "0"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9361,32 +9352,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 210.3802706 ,  202.78896091,  209.37985054, ...,  209.01285382,\n",
-       "         236.38711222,  287.17474003],\n",
-       "       [ 168.95070458,  167.72639132,  196.80981562, ...,  283.89300379,\n",
-       "         286.45807854,  325.14921863],\n",
-       "       [ 164.00744402,  144.82802848,  160.32846339, ...,  312.29210523,\n",
-       "         359.72470327,  446.94218557],\n",
-       "       ..., \n",
-       "       [ 180.91762581,  190.33437088,  133.53108289, ...,  340.50378148,\n",
-       "         486.11722257,  360.37391896],\n",
-       "       [ 215.81056849,  153.57321072,  130.33209541, ...,  466.16587591,\n",
-       "         420.06027598,  308.82271819],\n",
-       "       [ 156.31022895,  155.98418714,  156.49888309, ...,  304.3207512 ,\n",
-       "         293.91622933,  317.33696303]])"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-b6772a559630>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'images'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
     }
    ],
    "source": [
@@ -9395,7 +9375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -9403,22 +9383,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 210.3802706 ,  202.78896091,  209.37985054, ...,  209.01285382,\n",
-       "         236.38711222,  287.17474003],\n",
-       "       [ 168.95070458,  167.72639132,  196.80981562, ...,  283.89300379,\n",
-       "         286.45807854,  325.14921863],\n",
-       "       [ 164.00744402,  144.82802848,  160.32846339, ...,  312.29210523,\n",
-       "         359.72470327,  446.94218557],\n",
+       "array([[ 4,  4,  4, ...,  4,  5,  6],\n",
+       "       [ 3,  3,  4, ...,  6,  6,  7],\n",
+       "       [ 3,  3,  3, ...,  7,  8, 10],\n",
        "       ..., \n",
-       "       [ 180.91762581,  190.33437088,  133.53108289, ...,  340.50378148,\n",
-       "         486.11722257,  360.37391896],\n",
-       "       [ 215.81056849,  153.57321072,  130.33209541, ...,  466.16587591,\n",
-       "         420.06027598,  308.82271819],\n",
-       "       [ 156.31022895,  155.98418714,  156.49888309, ...,  304.3207512 ,\n",
-       "         293.91622933,  317.33696303]])"
+       "       [ 4,  4,  3, ...,  7, 11,  8],\n",
+       "       [ 4,  3,  2, ..., 10,  9,  7],\n",
+       "       [ 3,  3,  3, ...,  7,  6,  7]], dtype=uint8)"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9429,51 +9403,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Not a file id (Not a file id)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-250-e7e6f6c5d522>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/h5py/_hl/files.pyc\u001b[0m in \u001b[0;36mclose\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    274\u001b[0m             \u001b[0;31m# Close file-resident objects first, then the files.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m             \u001b[0;31m# Otherwise we get errors in MPI mode.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 276\u001b[0;31m             \u001b[0mid_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_obj_ids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m~\u001b[0m\u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOBJ_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    277\u001b[0m             \u001b[0mfile_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_obj_ids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh5f\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOBJ_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper (/private/tmp/pip-build/h5py/h5py/_objects.c:2400)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/_objects.pyx\u001b[0m in \u001b[0;36mh5py._objects.with_phil.wrapper (/private/tmp/pip-build/h5py/h5py/_objects.c:2357)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mh5py/h5f.pyx\u001b[0m in \u001b[0;36mh5py.h5f.get_obj_ids (/private/tmp/pip-build/h5py/h5py/h5f.c:3039)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Not a file id (Not a file id)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "h.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0,   1, 144, 200, 255,   0,   2], dtype=uint8)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([0,1,400,200, 255, 256.1, 2.99]).astype('uint8')"
    ]
   },
   {
