changed shape of spikes to reflect data

--- a/Loading Natural Stimulus Tutorial.ipynb
+++ b/Loading Natural Stimulus Tutorial.ipynb
@@ -6082,7 +6082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 294,
    "metadata": {
     "collapsed": false
    },
@@ -6095,19 +6095,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 295,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "natural_frames = NaturalScenesStimulus(f['images'], f['stimulus'])\n",
-    "natural_dataset = NaturalDatasetStimulus(natural_frames, 40)"
+    "natural_dataset = NaturalDatasetStimulus(natural_frames, 40)\n",
+    "natural_spikes = NaturalDatasetSpikes(f['spikes'], 40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 296,
    "metadata": {
     "collapsed": false
    },
@@ -6118,7 +6119,7 @@
        "(3, 40, 500, 500)"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6129,13 +6130,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 282,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 139 ms per loop\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit batch = natural_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541161, 40, 500, 500)"
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natural_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541161, 13)"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natural_spikes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 303,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(natural_spikes[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(natural_spikes[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(natural_spikes[:])"
    ]
   },
   {
