copying images and stimulus explicitly to memory

--- a/Save Natural Scenes Experiment.ipynb
+++ b/Save Natural Scenes Experiment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -9207,15 +9207,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data_dir = os.path.expanduser('~/Documents/Stanford/00 Baccus Lab/Data 2015_07_02/')\n",
+    "#data_dir = os.path.expanduser('~/Documents/Stanford/00 Baccus Lab/Data 2015_07_02/')\n",
+    "data_dir = os.path.expanduser('~/Git/natural-scenes/datasets/')\n",
     "new_stim_file = data_dir + 'natural_scenes_stimulus_compressed.h5'\n",
     "h = h5py.File(new_stim_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'images', u'spikes', u'stimulus']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.keys()"
    ]
   },
   {
@@ -9228,7 +9251,7 @@
     {
      "data": {
       "text/plain": [
-       "[u'images', u'spikes', u'stimulus']"
+       "(25, 1519, 1007)"
       ]
      },
      "execution_count": 4,
@@ -9237,7 +9260,7 @@
     }
    ],
    "source": [
-    "h.keys()"
+    "h['images'].shape"
    ]
   },
   {
@@ -9250,7 +9273,7 @@
     {
      "data": {
       "text/plain": [
-       "(25, 1519, 1007)"
+       "(541200, 13)"
       ]
      },
      "execution_count": 5,
@@ -9259,7 +9282,7 @@
     }
    ],
    "source": [
-    "h['images'].shape"
+    "h['spikes'].shape"
    ]
   },
   {
@@ -9272,7 +9295,7 @@
     {
      "data": {
       "text/plain": [
-       "(541200, 13)"
+       "(541200, 3)"
       ]
      },
      "execution_count": 6,
@@ -9281,7 +9304,7 @@
     }
    ],
    "source": [
-    "h['spikes'].shape"
+    "h['stimulus'].shape"
    ]
   },
   {
@@ -9294,7 +9317,7 @@
     {
      "data": {
       "text/plain": [
-       "(541200, 3)"
+       "array([ 14, 507, 963], dtype=int16)"
       ]
      },
      "execution_count": 7,
@@ -9303,7 +9326,7 @@
     }
    ],
    "source": [
-    "h['stimulus'].shape"
+    "h['stimulus'][0]"
    ]
   },
   {
@@ -9316,32 +9339,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 14, 507, 963], dtype=int16)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h['stimulus'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9358,29 +9359,6 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-b6772a559630>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'images'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'f' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "f['images'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
      "data": {
       "text/plain": [
        "array([[ 4,  4,  4, ...,  4,  5,  6],\n",
@@ -9392,7 +9370,7 @@
        "       [ 3,  3,  3, ...,  7,  6,  7]], dtype=uint8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
