--- a/Loading Natural Stimulus Tutorial.ipynb
+++ b/Loading Natural Stimulus Tutorial.ipynb
@@ -9,20 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -5832,7 +5823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -6082,20 +6073,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data_dir = os.path.expanduser('~/Documents/Stanford/00 Baccus Lab/Data 2015_07_02/')\n",
+    "#data_dir = os.path.expanduser('~/Documents/Stanford/00 Baccus Lab/Data 2015_07_02/')\n",
+    "data_dir = os.path.expanduser('~/Git/natural-scenes/datasets/')\n",
     "stim_file = data_dir + 'natural_scenes_stimulus_compressed.h5'\n",
     "f = h5py.File(stim_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -6108,7 +6100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -6119,7 +6111,7 @@
        "(3, 40, 500, 500)"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6130,7 +6122,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541161, 40, 500, 500)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natural_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541200, 500, 500)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natural_frames.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(541161, 13)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "natural_spikes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -6149,7 +6207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -6160,7 +6218,7 @@
        "(541161, 40, 500, 500)"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6171,7 +6229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -6182,7 +6240,7 @@
        "(541161, 13)"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6193,7 +6251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -6204,7 +6262,7 @@
        "2"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6215,7 +6273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -6226,7 +6284,7 @@
        "3"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6237,7 +6295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -6248,13 +6306,102 @@
        "0"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.min(natural_spikes[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getsizeof(natural_dataset[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "? getsizeof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'natural_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5088a4abcf33>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnatural_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'natural_dataset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "natural_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(np.floor(5.6))"
    ]
   },
   {
